# LowShelf-Filter-

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
